# metaball_research

./: HOWTO.txt  README.md
build2/: CMakeCache.txt  Makefile  cmake_install.cmake  normalPoly.srf  poly3.srf  savedPolygons.txt  weirdPolygon.srf  weirdPolygon2.srf
build2/public/: Makefile  cmake_install.cmake
build2/public/ir_transceiver/: Makefile  cmake_install.cmake
build2/public/opencv/: Makefile  cmake_install.cmake
build_3d/: CMakeCache.txt  Makefile  cmake_install.cmake
build_3d/public/: Makefile  cmake_install.cmake
build_3d/public/ir_transceiver/: Makefile  cmake_install.cmake
build_3d/public/opencv/: Makefile
build_current/: CMakeCache.txt  Makefile  cmake_install.cmake
build_current/meta0914.app/Contents/: Info.plist
build_current/meta0925.app/Contents/: Info.plist
build_current/metaball.app/Contents/: Info.plist
build_current/move.app/Contents/: Info.plist
build_current/move2.app/Contents/: Info.plist
build_current/public/: Makefile  cmake_install.cmake
build_current/public/ir_transceiver/: Makefile  cmake_install.cmake
build_current/public/opencv/: Makefile
build_meta2/: CMakeCache.txt  Makefile  cmake_install.cmake  savedPolygons.txt
build_meta2/fileHandle.app/Contents/: Info.plist
build_meta2/meta2.app/Contents/: Info.plist
build_meta2/public/: Makefile  cmake_install.cmake
build_meta2/public/ir_transceiver/: Makefile  cmake_install.cmake
build_meta2/public/opencv/: Makefile
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
build_test/metaEdge.app/Contents/: Info.plist
build_test/public/: Makefile  cmake_install.cmake
build_test/public/ir_transceiver/: Makefile  cmake_install.cmake
build_test/public/opencv/: Makefile
build_ysgebl2/: CMakeCache.txt  Makefile  cmake_install.cmake
build_ysgebl2/2DRetroMapTool/src/: Makefile  cmake_install.cmake
build_ysgebl2/fsgui3d/src/: Makefile
build_ysgebl2/fsgui3d/template/: Makefile  cmake_install.cmake
build_ysgebl2/fsgui3d/template-easy/: Makefile  fsgui3d_template_easy
build_ysgebl2/fsgui3d/template_with_filedialog/: Makefile
build_ysgebl2/fsguilib/filedialog/: Makefile
build_ysgebl2/fsguilib/src/: Makefile
build_ysgebl2/fsguilib/template/: Makefile
build_ysgebl2/fsguilib/template_with_filedialog/: Makefile
build_ysgebl2/fslazywindow/src/: Makefile
build_ysgebl2/fslazywindow/template/: Makefile
build_ysgebl2/fssimplefiledialog/sample/: Makefile  cmake_install.cmake
build_ysgebl2/fssimplefiledialog/src/: Makefile  cmake_install.cmake
build_ysgebl2/fssimplewindow/samples/: Makefile
build_ysgebl2/fssimplewindow/src/: Makefile  cmake_install.cmake
build_ysgebl2/fssimplewindow/template/: Makefile
build_ysgebl2/ir_transceiver/: Makefile  cmake_install.cmake
build_ysgebl2/ir_transceiver/cui_transmitter/: Makefile
build_ysgebl2/opencv/: Makefile
data/debug/: debug.txt  polyVert.txt  polyVert2.txt  tri.txt  tri2.txt  tri3.txt
data/metaInputs/: box.txt  box_edges.txt  box_rotated.txt  box_rotated_edges.txt  inputEx1.txt  metaball.txt  sample.txt
docs/: Iso-Surface Extraction.pptx
random/: 2dVecErase.cpp  a.out
src/iso_curve/: CMakeLists.txt
src/iso_curve/astar/: CMakeLists.txt  astar.cpp  main.cpp
src/iso_curve/curve/: CMakeLists.txt  astar.h  curve.h  main.cpp
src/iso_curve/dha/: CMakeLists.txt  dha.cpp  main.cpp
src/makeCube/: CMakeLists.txt  makeCube.cpp
src/metaball/: CMakeLists.txt  fileHandle.h  main.cpp  meta0903.cpp  meta0914.cpp  meta0925.cpp  metaEdge.cpp  move.cpp  move2.cpp  moveEdge.cpp  util.h
src/metaball_2d/: CMakeLists.txt  metaball_2d.cpp  metaball_2d_cos.cpp  metaball_2d_interp.cpp  metaball_2d_line.cpp
testBuild/: CMakeCache.txt  Makefile  cmake_install.cmake  wireModel_1_triangulated.srf
testBuild/public/: Makefile  cmake_install.cmake
(+708 files in other folders)
